--- a/backend/templates/account/base.html
+++ b/backend/templates/account/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block head_title %}Мой сайт{% endblock %}</title>
+
+
+
     <style>
         /* Базовые стили */
         body {
@@ -19,6 +22,34 @@
             margin: 0 auto;
             overflow: hidden;
             padding: 20px;
+        }
+        
+        .header{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 30px;
+            
+            img{
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+            }
+            
+            
+            a{
+                text-decoration: none;
+                font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+                font-size: 20px;
+                font-weight: 500;
+                color: black;
+                
+                &:hover{
+                    color: green;
+                    
+                    transition: 0.3s ease-in-out;
+                }
+            }
         }
 
         header {
@@ -90,10 +121,24 @@
 </head>
 <body>
 
+<main class="header">
+    <a href="https://3-gymnasium.kg/">
+    <img  src="https://eltr.kg/wp-content/uploads/2023/07/shkola-1-850x560.jpg">
+    </a>
+    <a href="https://3-gymnasium.kg/news/">Новости</a>
+    <a href="https://3-gymnasium.kg/teachers/">Учителя</a>
+    <a href="https://3-gymnasium.kg/students/">Ученики</a>
+    <a href="https://3-gymnasium.kg/graduates/">Выпускники</a>
+    <a href="https://3-gymnasium.kg/gallery">Галерея</a>
+    <a href="https://3-gymnasium.kg/contact">Контакты</a>
+    <a href="https://3-gymnasium.kg/fond">Фонды</a>
+
+</main>
 <main class="container">
     {% block content %}
     {% endblock %}
 </main>
+
 
 
 {% block extra_body %}{% endblock %}
