--- a/backend/templates/account/password_reset.html
+++ b/backend/templates/account/password_reset.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Сброс пароля" %}{% endblock %}
+{% block head_title %} "Сброс пароля" {% endblock %}
 
 {% block content %}
 <style>
